@@ -1,5 +1,8 @@
 2017-11-16  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/popup/popup.html (Main):
+	Add some elements related frameDesignation.
+
 	* tryXpath/popup/popup.js:
 	Rename variables. frameHeader -> frameIdHeader, frameBody ->
 	frameIdBody, frameCheckbox -> frameIdCheckbox.
